--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -5,77 +5,84 @@
     android:id="@+id/card"
     android:layout_width="match_parent"
     android:layout_height="100dp"
+    android:transitionName="@string/transition_details"
 
 
     >
+
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="?android:attr/selectableItemBackground"
+    android:baselineAligned="true"
+    >
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/name"
+        android:text="Name"/>
+
 
     <LinearLayout
         android:id="@+id/cardBackground"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="horizontal"
         android:layout_marginBottom="5dp">
 
-        <Button
-            android:id="@+id/name"
+
+
+
+        <TextView
+            android:id="@+id/swatch1"
             android:layout_width="65dp"
             android:layout_height="match_parent"
-            android:text="Title"
-
             android:textColor="@android:color/white"
-            android:textSize="15dp"/>
+            android:textSize="15dp"
+            android:layout_below="@+id/name"
+            />
 
 
-        <Button
+        <TextView
             android:id="@+id/hexValue"
             android:layout_width="65dp"
             android:layout_height="match_parent"
-
-
             android:textColor="@android:color/white"
-            android:textSize="15dp"
-            android:layout_alignRight="@+id/name"
+            android:layout_alignRight="@+id/swatch1"
 
             />
 
 
-        <Button
+        <TextView
             android:id="@+id/swatch3"
             android:layout_width="65dp"
             android:layout_height="match_parent"
-
-
-            android:textColor="@android:color/white"
-            android:textSize="15dp"
             android:layout_alignRight="@+id/hexValue"
 
             />
 
 
-        <Button
+        <TextView
             android:id="@+id/swatch4"
             android:layout_width="65dp"
             android:layout_height="match_parent"
-
-
-            android:textColor="@android:color/white"
-            android:textSize="15dp"
             android:layout_alignRight="@+id/swatch3"
 
             />
 
 
-        <Button
+        <TextView
             android:id="@+id/swatch5"
-            android:layout_width="65dp"
+            android:layout_width="68dp"
             android:layout_height="match_parent"
-
-
-            android:textColor="@android:color/white"
-            android:textSize="15dp"
             android:layout_alignRight="@+id/swatch4"
 
             />
 
     </LinearLayout>
+
+</LinearLayout>'
 
 </android.support.v7.widget.CardView>
